[infrastructure] fix spotless issues in different addons (#60)
* fix spotless issues

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>